# SONTECHSP

./: .bumpversion.cfg  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  FINAL_REFACTORING_RAPORU.md  GELIŞTIRICI_DOKÜMANTASYONU.md  KOD_KALITESI_REFACTORING_RAPORU.md  POS_KOD_KALITESI_README.md  POS_YENI_EKRAN_GECIS_RAPORU.md  README.md  REFACTORING_OZET.md  SÜREKLI_İYİLEŞTİRME_PLANI.md  alembic.ini  ayarlar_bolme_plani.md  ayarlar_refactor_dogrulama.py  ebelge_analiz_raporu.py  fonksiyonalite_dogrulama.py  fonksiyonalite_dogrulama_raporu_20251218_053324.json  fonksiyonalite_dogrulama_raporu_20251218_053535.json  fonksiyonalite_dogrulama_raporu_20251218_054125.json  kod-kalitesi-config.yaml  kod_kalitesi_analiz.py  kod_kalitesi_metrikleri_dogrulama.py  kod_kalitesi_metrikleri_raporu_20251218_032759.json  kod_kalitesi_raporu.json  mimari_dogrulama.py  mimari_dogrulama_raporu_20251218_033048.json  performans_baseline.json  performans_dogrulama.py  pos_sistem_entegrasyon_raporu.md  pyproject.toml  test-commands.md  test_ebelge_functionality.py  test_entegrasyon_dogrulama.py  test_hizli_kontrol.py  test_pos_kod_kalitesi.py  test_runner_simple.py  test_runner_temp.py  test_uygulama_calistir.py  (+1 more)
.github/workflows/: auto-version.yml  spec-completion.yml  test.yml
.kiro/hooks/: kod-analiz-hook.kiro.hook  spec-tamamlama-hook.kiro.hook
.kiro/specs/: MASTER_PLAN.md  PROJE_DURUMU.md  TAMAMLANAN_OZELLIKLER.md  sontechsp_v1.md
.kiro/steering/: agents.md  architecture.md  iletisim kuralları.md  master.md
arsiv/: UYGULAMA_KLASORLERI_ANALIZI.md  test_barkod_property.py  test_baslik_guncelleme_property.py  test_belge_deposu_property.py  test_belge_servisi_property.py  test_coklu_barkod_property.py  test_crm_eposta_gecerliligi_property.py  test_crm_sadakat_property_testleri.py  test_crm_telefon_eposta_tam_arama_property.py  test_crm_unit.py  test_dosya_boyut_limiti_invarianti_property.py  test_dosya_boyut_property.py  test_dto_format_tutarliligi_property.py  test_durum_akis_servisi_property.py  test_ebelge_functionality.py  test_ebelge_retry_basari_sifirlama_property.py  test_ebelge_retry_sayaci_property.py  test_ekran_gecis_erisilebilirligi_property.py  test_eksik_baslik_tespiti_property.py  test_end_to_end_refactoring.py  test_entegrasyon_arayuz.py  test_es_zamanli_erisim_property.py  test_eticaret_entegrasyon.py  test_fonksiyonel_davranis_korunumu_property.py  test_handler_loglama_tutarliligi_property.py  test_import_yapisi_korunumu_property.py  test_import_yapisi_property.py  test_kargo_properties.py  test_kayit_temizleme.py  test_kurulum_entegrasyonu.py  test_kurulum_migration_hata_property.py  test_kurulum_sifre_hash_guvenlik_property.py  test_log_icerik_tamligi_property.py  test_modul_tutarlilik_property.py  test_negatif_stok_eşik_kuralları_property.py  test_negatif_stok_limit_senaryolar.py  test_negatif_stok_tutarlılığı_property.py  test_numara_servisi_property.py  test_offline_kuyruk.py  test_offline_kuyruk_fifo_property.py  (+29 more)
arsiv/pos_eski_ui/: __init__.py
arsiv/uygulama_eski/: __init__.py
docs/: cekirdek-altyapi-kullanimi.md  veritabani-migration-kullanimi.md
scripts/: UI_SMOKE_TEST_README.md  kod-kalitesi-cli.py  kod-kalitesi-kurulum.py  otomatik-senkron.bat  otomatik-senkron.py  pos-kod-kalitesi-kontrol.bat  pos-kod-kalitesi-kontrol.py  spec-tamamlandi.bat  spec-tamamlandi.py  test-critical.bat  test-fast.bat  test-parallel.bat  test-slow.bat  test-smoke.bat  ui-smoke-test-calistir.bat  ui-smoke-test-hizli.bat  ui-smoke-test-kurulum.bat  ui-smoke-test-rapor.bat  ui_smoke_test_calistir.py  ui_smoke_test_kurulum.py
sontechsp/: __init__.py
sontechsp/testler/: __init__.py  ci_cd_selector.py  conftest.py  parallel_test_manager.py  test_ajan_modul_organizasyonu.py  test_ana_uygulama.py  test_bagimlilik_standardi.py  test_baslangic_dosyalari_calisabilirlik.py  test_cekirdek_modul_bagimsizligi.py  test_katmanli_mimari.py  test_klasor_hiyerarsisi.py  test_kod_kalitesi_standardi.py  test_otomatik_kurulum_sureci.py  test_performans_optimizasyonu.py  test_pos_ui.py  test_pos_ui_complete.py  test_reporter.py  test_selector.py  test_sepet_modeli_property.py  test_turkce_ascii_tablo_isimlendirmesi.py  test_turkce_dokumantasyon_standardi.py  test_veritabani_gereksinimleri.py  test_windows_kurulum_dokumantasyonu.py  test_yardimcilari.py
sontechsp/uygulama/: __init__.py  ana.py
tests/: README_TEST.md  __init__.py  test_barkod_hata_property.py  test_baslik_format_tutarliligi_property.py  test_buton_eslestirme_veri_butunlugu_property.py  test_cekirdek_izole_test_property.py  test_cli_entegrasyonu.py  test_crm_ad_soyad_kismi_arama_property.py  test_crm_coklu_kriter_and_mantigi_property.py  test_crm_entegrasyon_basarisizlik_yonetimi_property.py  test_crm_entegrasyon_hata_yonetimi_property.py  test_crm_entegrasyon_puan_hesaplama_property.py  test_crm_gecersiz_id_hata_yonetimi_property.py  test_crm_kismi_guncelleme_property.py  test_crm_musteri_alan_zorunlulugu_property.py  test_crm_otomatik_zaman_damgasi_property.py  test_crm_telefon_benzersizligi_property.py  test_crm_varsayilan_aktif_durum_property.py  test_dependency_injection_property.py  test_dialog_acma_property.py  test_dogrulama_servisi_property.py  test_dto_format_tutarliligi_property.py  test_fonksiyon_boyut_limiti_invarianti_property.py  test_fonksiyon_boyut_property.py  test_fonksiyonalite_korunumu_property.py  test_fonksiyonel_gruplama_property.py  test_formatlama.py  test_import_guncelleme_sistemi.py  test_init_dosyasi_guncelleme_property.py  test_kargo_properties_2.py  test_kargo_unit.py  test_katman_sinirlari_invarianti_property.py  test_kayit_listeleme_tamligi_property.py  test_kaynak_temizleme.py  test_kod_tekrari_property.py  test_kritik_stok_uyari_property.py  test_kurulum_admin_idempotentlik_property.py  test_kurulum_kullanici_hata_loglama_property.py  test_migration_property.py  test_migration_unit.py  (+27 more)
(+500 files in other folders)
